[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/goblin_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Actors/Healthbar.gd" type="Script" id=3]
[ext_resource path="res://Assets/healthbar/over.png" type="Texture" id=4]
[ext_resource path="res://Assets/healthbar/under.png" type="Texture" id=5]
[ext_resource path="res://Assets/healthbar/progress.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 80, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ SubResource( 13 ), null, SubResource( 14 ), null, SubResource( 15 ), null, SubResource( 16 ), null ],
"loop": true,
"name": "knockback",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 24, 7.60492 )

[sub_resource type="CircleShape2D" id=22]
radius = 36.3984

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 16, 8 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
MAX_SPEED = 300
acceleration = 3000

[node name="NavMap" type="Navigation2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 4, 4 )
frames = SubResource( 17 )
animation = "knockback"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17 )
shape = SubResource( 18 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 2.39233, -3.31246 )
shape = SubResource( 22 )

[node name="Weapon" type="Area2D" parent="."]
collision_layer = 2

[node name="Collision" type="CollisionShape2D" parent="Weapon"]
position = Vector2( 32, 0 )
shape = SubResource( 23 )
disabled = true

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true

[node name="WeaponTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = -34.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthNode" type="Node2D" parent="."]
scale = Vector2( 0.3, 0.2 )

[node name="Healthbar" type="TextureProgress" parent="HealthNode"]
margin_left = -80.0
margin_top = -200.0
margin_right = 80.0
margin_bottom = -136.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 6 )
fill_mode = 6
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="Weapon" to="." method="_on_Weapon_area_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockbackTimer_timeout"]
[connection signal="timeout" from="WeaponTimer" to="." method="_on_WeaponTimer_timeout"]
